split app into its own files

--- a/prunner.fsproj
+++ b/prunner.fsproj
@@ -59,6 +59,10 @@
   </Target>
   -->
   <ItemGroup>
+    <Compile Include="types.fs" />
+    <Compile Include="printer.fs" />
+    <Compile Include="test.fs" />
+    <Compile Include="actors.fs" />
     <Compile Include="Program.fs" />
     <Content Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
